--- a/06-Build-Apps-with-Node.js-Express-and-MongoDB/01-Build-ToDo-Restful-CRUD-API/package.json
+++ b/06-Build-Apps-with-Node.js-Express-and-MongoDB/01-Build-ToDo-Restful-CRUD-API/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.0",
-    "nodemon": "^3.1.0",
     "portfinder": "^1.0.32"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.0"
   }
 }
