--- a/06-Build-Apps-with-Node.js-Express-and-MongoDB/02-Build-ToDo-Web-App/package.json
+++ b/06-Build-Apps-with-Node.js-Express-and-MongoDB/02-Build-ToDo-Web-App/package.json
@@ -8,13 +8,17 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongoose": "^8.2.0",
+    "mongoose": "^8.2.0"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   }
 }
