--- a/02-JavaScript-Libraries/01-React/03-Next.js-Framework/my-next.js-app/package.json
+++ b/02-JavaScript-Libraries/01-React/03-Next.js-Framework/my-next.js-app/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.4"
   }
